<resources>
    <string name="app_name">Zend me to heaven</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
    <string name="you_win">You win! Your score is:</string>
    <string name="ok">OK</string>
    <string name="sign_in_to_upload_this_score">Sign in now to upload this score, save your achievements and share your progress with friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="AppMainTitle">ZEND ME TO HEAVEN</string>
    <string name="DefaultValueHeight">0.0</string>
    <string name="TryAgainButtonName">Try Again</string>
    <string name="AchievementButtonName">Achievements</string>
    <string name="LeaderboardButtonName">Leaderboard</string>
</resources>

