<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#278ac5"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:weightSum="1"
    style="@style/Widget.AppCompat.Light.ListView.DropDown">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/AppMainTitle"
        android:textSize="35sp"
        android:textColor="#f3f5f9"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/maxZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/DefaultValueHeight"
        android:textSize="130sp"
        android:textColor="#b8f528"
        android:textStyle="bold"/>

    <!-- TODO: Исправить костыль -->
    <Space
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="vertical">
        <Button
            android:layout_marginBottom="5dp"
            android:layout_gravity="bottom"
            android:background="#ffffff"
            android:layout_height="70dp"
            android:layout_width="fill_parent"
            android:padding="0dp"
            android:text="@string/TryAgainButtonName"
            android:textSize="20sp"
            android:onClick="reset"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_gravity="bottom"
            android:layout_height="fill_parent">
            <LinearLayout
                android:id="@+id/btnLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="2.5dp"
                    android:background="#ffffff"
                    android:layout_height="70dp"
                    android:layout_width="0dp"
                    android:text="@string/AchievementButtonName"
                    android:textSize="20sp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:onClick="onShowAchievements"/>
                <Button
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="2.5dp"
                    android:background="#ffffff"
                    android:layout_gravity="bottom"
                    android:layout_height="70dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/LeaderboardButtonName"
                    android:textSize="20sp"
                    android:onClick="onShowLeaderboard"/>
            </LinearLayout>
            <ListView android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/LstPeriodOptions"
                android:layout_above="@id/btnLL" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>